--- a/PlanXFrontend/Dashboard.xaml
+++ b/PlanXFrontend/Dashboard.xaml
@@ -4,7 +4,10 @@
              x:Class="MauiApp1.Dashboard"
              Title=""
              NavigationPage.TitleIconImageSource="Resources/Images/planxlogoresize.png"
-             xmlns:syncfusion="clr-namespace:Syncfusion.Maui.Scheduler;assembly=Syncfusion.Maui.Scheduler">
+             xmlns:syncfusion="clr-namespace:Syncfusion.Maui.Scheduler;assembly=Syncfusion.Maui.Scheduler"
+             xmlns:viewModel="clr-namespace:PlanXFrontend.ViewModel">
+
+    <!-- Define Toolbar Items -->
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="tbiJoinGroup" Order="Primary" Text="Join Group" Clicked="tbiJoinGroup_Clicked"/>
         <ToolbarItem x:Name="tbiTask" Order="Primary" Text="Tasks" Clicked="tbiTask_Clicked"/>
@@ -23,13 +26,20 @@
                     Grid.Row="0"
                     HorizontalOptions="FillAndExpand">
             <ScrollView>
+                
                     <syncfusion:SfScheduler x:Name="ScheduleView" 
-                                AppointmentsSource="{Binding Appointments}"
+                                AppointmentsSource="{Binding SchedulerEvents}"
                                 AllowedViews="Agenda,Day,Month,TimelineDay,TimelineMonth,TimelineWeek,TimelineWorkWeek,Week"
                                 View="Week"
                                 ShowWeekNumber="True"
                                 TodayHighlightBrush="#8D14A5">
-                    </syncfusion:SfScheduler>
+                    <syncfusion:SfScheduler.BindingContext>
+                        <viewModel:ControlViewModel />
+                    </syncfusion:SfScheduler.BindingContext>
+
+                </syncfusion:SfScheduler>
+                        
+
             </ScrollView>
 
 
