--- a/PlanXFrontend/TasksPage.xaml
+++ b/PlanXFrontend/TasksPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlanXFrontend.TasksPage"
              xmlns:syncfusion="clr-namespace:Syncfusion.Maui.Scheduler;assembly=Syncfusion.Maui.Scheduler"
-             Title="Tasks">
+             Title="Tasks"
+             xmlns:viewModel="clr-namespace:PlanXFrontend.ViewModel">
 
              <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" 
              BackgroundColor="White">
