--- a/PlanXFrontend/AccountPage.xaml
+++ b/PlanXFrontend/AccountPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlanXFrontend.AccountPage"
-             Title="AccountPage">
+             Title="Account">
     <StackLayout>
     <StackLayout HeightRequest="150">
         <StackLayout.Background>
@@ -45,7 +45,7 @@
 
         <!-- Apellidos -->
         <Label Text="Last Name" FontAttributes="Bold" FontSize="Subtitle"/>
-        <Entry x:Name="EnyLastNameAccount"
+        <Entry x:Name="enyLastNameAccount"
             FontSize="Medium" />
 
         <!-- Correo Electrónico (No editable) -->
@@ -57,6 +57,7 @@
         <!-- País de Residencia -->
         <Label Text="Country" FontAttributes="Bold" FontSize="Subtitle"/>
             <Picker Title="Select Your Country" 
+                x:Name="pickerCountry"
                 TitleColor="Black" 
                 FontSize="Medium"
                 TextColor="Black"
@@ -98,6 +99,7 @@
         VerticalOptions="EndAndExpand"
         BackgroundColor="Red"
         FontAttributes="Bold"
-        HeightRequest="40"/>
+        HeightRequest="40"
+        Clicked="btnLogOut"/>
     </StackLayout>
 </ContentPage>
