--- a/PlanXFrontend/AppShell.xaml
+++ b/PlanXFrontend/AppShell.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:PlanXFrontend"
+    xmlns:views="clr-namespace:PlanXFrontend.View"
     Shell.FlyoutBehavior="Disabled"
     Title="PlanXFrontend">
 
