--- a/PlanXFrontend/CreateTaskPage.xaml
+++ b/PlanXFrontend/CreateTaskPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlanXFrontend.CreateTaskPage"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             Title="CreateTaskPage">
+             Title="Create Task">
 
 <StackLayout BackgroundColor="White" Margin="0">
 <StackLayout.Background>
