--- a/PlanXFrontend/View/PopupDetailEvent.xaml
+++ b/PlanXFrontend/View/PopupDetailEvent.xaml
@@ -168,7 +168,8 @@
                         HorizontalOptions="FillAndExpand"
                         FontFamily="Roboto"
                         TextColor="Turquoise" 
-                        FontAttributes="Bold"/>
+                        FontAttributes="Bold"
+                        Clicked="btnViewScheduleEvent_Clicked"/>
                         </FlexLayout>
                 
             
