--- a/PlanXFrontend/Dashboard.xaml
+++ b/PlanXFrontend/Dashboard.xaml
@@ -34,8 +34,7 @@
                         <viewModel:ControlViewModel />
                             </syncfusion:SfScheduler.BindingContext>
                     <syncfusion:SfScheduler.HeaderView>
-                        <syncfusion:SchedulerHeaderView 
-                                        Background="White">
+                        <syncfusion:SchedulerHeaderView Background="White">
                         </syncfusion:SchedulerHeaderView>
                     </syncfusion:SfScheduler.HeaderView>
                 </syncfusion:SfScheduler>
@@ -48,15 +47,15 @@
                     HeightRequest="1" 
                     HorizontalOptions="Fill"/>
                     <Button Text="+"
-                x:Name="btnCreateEvent"
-                Clicked="btnCreateEvent_Clicked"
-                FontAttributes="Bold"
-                FontFamily="Roboto"
-                FontSize="Medium"
-                TextColor="White"
-                CornerRadius="0">
+                    x:Name="btnCreateEvent"
+                    Clicked="btnCreateEvent_Clicked"
+                    FontAttributes="Bold"
+                    FontFamily="Roboto"
+                    FontSize="Medium"
+                    TextColor="White"
+                    CornerRadius="0">
                 <Button.Background>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0"> 
                         <GradientStop Color="Black" Offset="0.0" />
                         <GradientStop Color="#8D14A5" Offset="1.0" />
                     </LinearGradientBrush>
