--- a/PlanXFrontend/ChangePasswordPage.xaml
+++ b/PlanXFrontend/ChangePasswordPage.xaml
@@ -33,7 +33,8 @@
             Padding="10"
             CornerRadius="10"
             HorizontalOptions="Center"
-            VerticalOptions="Center">
+            VerticalOptions="Center"
+            Clicked="Button_Clicked">
                 <Button.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
                         <GradientStop Color="Black" Offset="0.0" />
